Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34414

QML TextField in embedded QQuickView cannot get focus a second time

XMLWordPrintable

    • macOS

      In a QML form containing a TextField, after opening and then closing a child form, also containing a TextField, the focus cannot be returned to the TextField in the parent form. This only happens if the parent form is shown using QQuickView, it works fine from qmlscene in Qt Creator.

      Example code is attached.

        1. focus-bug-demo.txt
          3 kB
          Glenn Ramsey
        2. focus.tar.gz
          2 kB
          Glenn Ramsey
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            glennr Glenn Ramsey
            Votes:
            14 Vote for this issue
            Watchers:
            18 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes