I think I've fixed the keyboard focus problem.  It appears to be a Qt bug, related to the use of QQuickView and container widget.

https://bugreports.qt.io/browse/QTBUG-34414

Solution was to override event handler in SynthWindow and activate the
window explicityly:

bool SynthWindow::event(QEvent *event)
{
    if (event->type() == QEvent::ActivationChange) {
        if(view->isActive()) {
            window()->activateWindow();
            return true;
        }
    }
    // Make sure the rest of events are handled
    return QWidget::event(event);
}